kubernetes/deployment-app-a.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - name: app-a-container
          image: pranavpracto/sample-service-a:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
