kubernetes/deployment-app-b.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  template: 
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - name: app-b-container
          image: pranavpracto/sample-service-b:0.0.1-SNAPSHOT
          ports:
            - containerPort: 9090
