kubernetes/service-app-a.yaml
apiVersion: v1
kind: Service 
metadata:
  name: service-a 
spec:
  selector:
    app: app-a
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
