kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: test-ingress
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx 
  rules:
    - http:
        paths:
          - path: /a(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-a
                port:
                  number: 8080
          - path: /b(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: service-b
                port:
                  number: 8080
